# fungalagentfinal

./: .env.example  .gitignore  README.md  pyproject.toml  report.md
colab_smollm2_fungi_sft/: .gitignore  README.md  artifact_manifest.json  requirements-colab.txt  smollm2_fungi_sft_colab.ipynb
colab_smollm2_fungi_sft/config/: smollm2_colab_config.yaml
colab_smollm2_fungi_sft/scripts/: make_upload_zip.ps1
evaluation/smollm2_fungi_sft_20260611/: report.md
evaluation/smollm2_fungi_sft_20260611/results/: behavior_eval_results.csv  behavior_eval_results.json  summary.json  workflow_eval_results.csv  workflow_eval_results.json
evaluation/smollm2_fungi_sft_20260611/scripts/: evaluate_smollm2_lora_agentic.py
src/fungi_rag/: app.py  citation.py  config.py  evaluate.py  generator.py  ingest.py  models.py  retrieval.py  safety.py  sources.py  workflow.py
tests/: test_generator_workflow_app.py  test_models_safety.py  test_retrieval_ingest.py
