[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "fungi-rag"
version = "0.1.0"
description = "Fungi RAG learning system with local retrieval and evaluation."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
authors = [{ name = "Yoel Beyene, Jack Landers" }]
dependencies = [
  "beautifulsoup4>=4.12",
  "chromadb>=0.5",
  "gradio>=4.44",
  "httpx>=0.27",
  "langchain-core>=0.3",
  "langchain-text-splitters>=0.3",
  "langgraph>=0.2",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "PyYAML>=6.0",
  "scikit-learn>=1.5",
  "sentence-transformers>=3.0",
  "typer>=0.12",
]

[project.optional-dependencies]
openai = ["openai>=1.40"]
eval = ["unitxt>=1.20"]
dev = ["pytest>=8.2"]
local-llm = [
  "accelerate>=1.0",
  "torch>=2.2",
  "transformers>=4.48",
]

[project.scripts]
fungi-rag = "fungi_rag.app:main"
fungi-rag-ingest = "fungi_rag.ingest:main"
fungi-rag-run = "fungi_rag.run:main"
fungi-rag-evaluate = "fungi_rag.evaluate:main"
fungi-rag-sources = "fungi_rag.sources:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"
